manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lumi-homepage-web
    labels:
        app: web
spec:
    selector:
        matchLabels:
            octopusexport: OctopusExport
    replicas: 3
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: web
                octopusexport: OctopusExport
        spec:
            containers:
                - name: homepage
                  image: lumieducation/homepage
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 8080
                        protocol: TCP
                  resources:
                      requests:
                          memory: "200Mi"
                          cpu: "100m"
                      limits:
                          memory: "1000Mi"
                          cpu: "500m"
            affinity:
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - weight: 100
                          podAffinityTerm:
                              labelSelector:
                                  matchExpressions:
                                      - key: app
                                        operator: In
                                        values:
                                            - web
                              topologyKey: kubernetes.io/hostname
