manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lumi-homepage-svc
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
